--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Saved Coffee"
+        android:text="@string/saved_coffee"
         android:id="@+id/button2"
         android:layout_below="@+id/imageView1"
         android:layout_alignLeft="@+id/imageView1"
@@ -41,7 +41,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Map Coffee"
+        android:text="@string/map_coffee"
         android:id="@+id/button"
         android:layout_alignBottom="@+id/button2"
         android:layout_toRightOf="@+id/button2"
@@ -51,7 +51,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Custom Coffee"
+        android:text="@string/custom_coffee"
         android:id="@+id/button3"
         android:layout_below="@+id/button2"
         android:layout_centerHorizontal="true" />
