--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/saved_coffee"
-        android:id="@+id/button2"
+        android:id="@+id/button_saved_coffee"
         android:layout_below="@+id/imageView1"
         android:layout_alignLeft="@+id/imageView1"
         android:layout_alignStart="@+id/imageView1" />
@@ -42,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/map_coffee"
-        android:id="@+id/button"
+        android:id="@+id/button_map_coffee"
         android:layout_alignBottom="@+id/button2"
         android:layout_toRightOf="@+id/button2"
         android:layout_toEndOf="@+id/button2" />
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/custom_coffee"
-        android:id="@+id/button3"
+        android:id="@+id/button_custom_coffee"
         android:layout_below="@+id/button2"
         android:layout_centerHorizontal="true" />
 
