--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,9 +43,9 @@
         android:layout_height="wrap_content"
         android:text="@string/map_coffee"
         android:id="@+id/button_map_coffee"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_toRightOf="@+id/button2"
-        android:layout_toEndOf="@+id/button2" />
+        android:layout_below="@+id/imageView1"
+        android:layout_alignRight="@+id/imageView1"
+        android:layout_alignEnd="@+id/imageView1" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:text="@string/custom_coffee"
         android:id="@+id/button_custom_coffee"
-        android:layout_below="@+id/button2"
+        android:layout_below="@+id/button_saved_coffee"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
