--- a/app/src/main/res/layout/custom_coffee.xml
+++ b/app/src/main/res/layout/custom_coffee.xml
@@ -6,6 +6,16 @@
     android:gravity="left"
     android:padding="20dp">
 
-    
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/enter_the_name_of_your_coffee"/>
+
+    </LinearLayout>
 
 </LinearLayout>
