edit text for coffee custom

--- a/app/src/main/res/layout/custom_coffee.xml
+++ b/app/src/main/res/layout/custom_coffee.xml
@@ -16,6 +16,11 @@
             android:layout_height="wrap_content"
             android:text="@string/enter_the_name_of_your_coffee"/>
 
+        <EditText
+            android:layout_width="185dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/users_name_edit_text"/>
+
     </LinearLayout>
 
 </LinearLayout>
