--- a/app/src/main/res/layout/custom_coffee.xml
+++ b/app/src/main/res/layout/custom_coffee.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="left"
+    android:orientation="vertical"
     android:padding="20dp">
 
     <LinearLayout
@@ -14,12 +14,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/enter_the_name_of_your_coffee"/>
+            android:text="@string/enter_the_name_of_your_coffee" />
 
         <EditText
+            android:id="@+id/users_name_edit_text"
             android:layout_width="185dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/users_name_edit_text"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
@@ -27,12 +27,20 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp">
 
-        <!-- Send some data along ! :D -->
+        <!-- Need to be able to sense if user clicks button to send coffee name to activity main:
+         do this with on click-->
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/enter_coffee"/>
+            android:text="@string/enter_coffee"
+            android:onClick="onSendCoffeeName"/>
+
+        <TextView
+            android:id="@+id/calling_activity_info_text_view"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/calling_activity_message"/>
     </LinearLayout>
 
 </LinearLayout>
