--- a/app/src/main/res/layout/custom_coffee.xml
+++ b/app/src/main/res/layout/custom_coffee.xml
@@ -40,7 +40,8 @@
             android:id="@+id/calling_activity_info_text_view"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/calling_activity_message"/>
+            android:text="@string/calling_activity_message"
+            />
     </LinearLayout>
 
 </LinearLayout>
