--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,4 +77,13 @@
         android:layout_alignLeft="@+id/button_custom_coffee"
         android:layout_alignStart="@+id/button_custom_coffee" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/make_more_button"
+        android:layout_below="@+id/button_custom_coffee"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="coffeeButton"
+        android:onClick="MakeMoreButtonsOnClick"/>
+
 </RelativeLayout>
