--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.charl.dailygrind.MainActivity"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:id="@+id/main_view_layout">
 
     <ImageView
         android:id="@+id/imageView1"
