--- a/app/src/main/res/layout/xtra_buttons.xml
+++ b/app/src/main/res/layout/xtra_buttons.xml
@@ -6,9 +6,10 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/customfloat"
+        android:text="@string/custom_float"
         android:id="@+id/custom_float"
         android:layout_gravity="center_vertical"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="154dp" />
 </RelativeLayout>
