--- a/app/src/main/res/layout/custom_coffee.xml
+++ b/app/src/main/res/layout/custom_coffee.xml
@@ -30,12 +30,6 @@
         <!-- Need to be able to sense if user clicks button to send coffee name to activity main:
          do this with on click-->
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/enter_coffee"
-            android:onClick="onSendCoffeeName"/>
-
         <TextView
             android:id="@+id/calling_activity_info_text_view"
             android:layout_height="wrap_content"
@@ -43,5 +37,13 @@
             android:text="@string/calling_activity_message"
             />
     </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/enter_coffee"
+        android:src="@mipmap/coffee"
+        android:scaleType="fitXY"
+        android:onClick="onSendCoffeeName"/>
 
 </LinearLayout>
