--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,8 @@
         android:id="@+id/button_map_coffee"
         android:layout_below="@+id/imageView1"
         android:layout_alignRight="@+id/imageView1"
-        android:layout_alignEnd="@+id/imageView1" />
+        android:layout_alignEnd="@+id/imageView1"
+        android:onClick="onGetCustomMapClick"/>
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -50,33 +51,6 @@
         android:layout_marginBottom="20dp"
         android:onClick="onGetCustomCoffeeClick"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/name_enter_coffee"
-        android:text="@string/enter_the_name_of_your_coffee"
-        android:layout_below="@+id/button_custom_coffee"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp"
-        android:textStyle="bold"
-        android:textSize="20sp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/the_chosen_coffee_was"
-        android:layout_below="@+id/name_enter_coffee"
-        android:layout_alignLeft="@+id/button_custom_coffee"
-        android:layout_alignStart="@+id/button_custom_coffee" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/make_more_button"
-        android:src="@mipmap/coffee"
-        android:contentDescription="coffeeButton"
-        android:onClick="MakeMoreButtonsOnClick"
-        android:layout_alignBottom="@+id/name_enter_coffee"
-        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
