--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.charl.dailygrind.MainActivity"
     android:background="@color/white"
-    android:id="@+id/main_view_layout">
+    android:id="@+id/main_view_layout"
+    android:visibility="visible">
 
     <ImageView
         android:id="@+id/imageView1"
@@ -20,7 +21,7 @@
         android:layout_centerHorizontal="true" />
 
     <Button
-        style="?android:attr/buttonStyleSmall"
+        style="@style/Base.TextAppearance.AppCompat.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/saved_coffee"
