--- a/app/src/main/res/layout/saved_coffee.xml
+++ b/app/src/main/res/layout/saved_coffee.xml
@@ -1,23 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_alignParentBottom="true"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical">
+    <ListView
+        android:id="@+id/saved_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ListView>
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </ListView>
+</LinearLayout>
 
 
-
-    </LinearLayout>
-
-</ScrollView>
