--- a/app/src/main/res/layout/saved_coffee.xml
+++ b/app/src/main/res/layout/saved_coffee.xml
@@ -9,9 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/list_view">
-
-
     </ListView>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="boopity"/>
 
 
 </LinearLayout>
