--- a/app/src/main/res/layout/saved_coffee.xml
+++ b/app/src/main/res/layout/saved_coffee.xml
@@ -5,16 +5,23 @@
     android:orientation="vertical"
     >
 
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="50px"
+        android:layout_height="50px"
+        android:layout_marginLeft="5px"
+        android:layout_marginRight="20px"
+        android:layout_marginTop="5px"
+        android:src="@drawable/coffeeimage" >
+    </ImageView>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/list_view">
     </ListView>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="boopity"/>
 
 
 </LinearLayout>
