--- a/app/src/main/res/layout/custom_coffee.xml
+++ b/app/src/main/res/layout/custom_coffee.xml
@@ -1,40 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ScrollView01"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:scrollbars="vertical">
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:orientation="vertical"
-        android:layout_height="fill_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-        <!--Put form controls here-->
-
-        <TextView
-            android:id="@+id/TextViewTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/feed_back_title"
-            android:textSize="10pt">
-        </TextView>
-
-        <EditText
-            android:id="@+id/EditTextName"
-            android:layout_height="wrap_content"
-            android:hint="@string/feed_back_name"
-            android:inputType="textPersonName"
-            android:layout_width="fill_parent">
-        </EditText>
-
-        <EditText
-            android:id="@+id/EditTextEmail"
-            android:layout_height="wrap_content"
-            android:hint="@string/feed_back_coffee_type"
-            android:inputType="textEmailAddress"
-            android:layout_width="fill_parent">
-        </EditText>
-
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
