--- a/app/src/main/res/layout/saved_coffee.xml
+++ b/app/src/main/res/layout/saved_coffee.xml
@@ -2,6 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     >
 
@@ -11,10 +14,7 @@
         android:id="@+id/list_view">
     </ListView>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="boopity"/>
+
 
 
 </LinearLayout>
