--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -10,5 +10,6 @@
         android:id="@+id/text_view_row_1"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:padding="15dp"/>
+        android:padding="15dp"
+        />
 </LinearLayout>
