--- a/app/src/main/res/layout/row_layout_2.xml
+++ b/app/src/main/res/layout/row_layout_2.xml
@@ -4,6 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"> 
 
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/coffeehappy"
+
+        />
+
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
