--- a/app/src/main/res/layout/row_layout_2.xml
+++ b/app/src/main/res/layout/row_layout_2.xml
@@ -9,6 +9,7 @@
         android:layout_height="25dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="25dp"
+        android:id="@+id/image_view_1"
         android:src="@drawable/coffeehappy"
 
         />
