--- a/app/src/main/res/layout/row_layout_2.xml
+++ b/app/src/main/res/layout/row_layout_2.xml
@@ -7,20 +7,33 @@
     <ImageView
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="25dp"
         android:id="@+id/image_view_1"
         android:src="@drawable/coffeehappy"
-
+        android:layout_gravity="center_vertical"
         />
 
-
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/text_view_row_2"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:padding="15dp"
-        />
+        android:orientation="vertical">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_view_row_2"
+            android:textStyle="bold"
+            android:padding="15dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_view_row_3"
+            android:textStyle="bold"
+            android:padding="15dp"
+            />
+    </LinearLayout>
+
+
 </LinearLayout>
