--- a/app/src/main/res/layout/row_layout_2.xml
+++ b/app/src/main/res/layout/row_layout_2.xml
@@ -5,10 +5,10 @@
     android:orientation="horizontal"> 
 
     <ImageView
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/image_view_1"
-        android:src="@drawable/coffeehappy"
+        android:src="@mipmap/coffee"
         android:layout_gravity="center_vertical"
         />
 
