--- a/app/src/main/res/layout/row_layout_2.xml
+++ b/app/src/main/res/layout/row_layout_2.xml
@@ -2,15 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"> 
+    android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/image_view_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/image_view_1"
-        android:src="@mipmap/coffee"
         android:layout_gravity="center_vertical"
-        />
+        android:src="@mipmap/coffee" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,20 +18,20 @@
 
 
         <TextView
+            android:id="@+id/text_view_row_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/text_view_row_2"
-            android:textStyle="bold"
             android:padding="15dp"
-            />
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/text_view_row_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/text_view_row_3"
-            android:textStyle="bold"
             android:padding="15dp"
-            />
+            android:textStyle="bold" />
+
+
     </LinearLayout>
 
 
