--- a/app/src/main/res/layout/custom_coffee.xml
+++ b/app/src/main/res/layout/custom_coffee.xml
@@ -62,6 +62,34 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:hint="@string/prompt_size"
+                android:imeActionId="@+id/coffee_serving_size"
+                android:ems="10"
+                android:id="@+id/editText" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberSigned"
+                android:hint="@string/prompt_caffiene_content"
+                android:imeActionId="@+id/coffee_serving_size"
+                android:ems="10"
+                android:id="@+id/editText2" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:hint="@string/prompt_serving_number"
+                android:imeActionId="@+id/coffee_serving_number"
+                android:ems="10"
+                android:id="@+id/editText3"
+                android:layout_gravity="center_horizontal" />
+
             <Button
                 android:id="@+id/email_sign_in_button"
                 style="?android:textAppearanceSmall"
